@@ -1,3 +1,14 @@
+Mon Mar 23 15:09:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Sequence_Iterators/run_test.pl:
+          Converted to the new test framework
+
+        * tests/Transport_Cache_Manager/run_test.pl:
+          Simplified
+
+        * bin/tao_orb_tests.lst:
+          Added new test
+
 Mon Mar 23 13:48:21 UTC 2009  Adam Mitz  <mitza@ociweb.com>
 
         * rules.tao.GNU:
